--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
           <div class="row">
             <!-- Contact form-->
             <div class="col-12">
-              <form class="contact-form" id="contact-form" name="contact" data-netlify="true">
+              <form class="contact-form" id="contact-form" name="contact" method="POST" data-netlify="true">
                 <div class="row">
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-name" type="text" name="name" placeholder="Name" required=""></div>
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required=""></div>
