--- a/index.html
+++ b/index.html
@@ -595,9 +595,9 @@
             </div>
           </div>
           <div class="row">
-            <!-- Contact form-->
+            <!-- Contact form                action="php/contact.php"  -->
             <div class="col-12">
-              <form class="contact-form" id="contact-form" name="contact" method="POST" data-netlify="true">
+              <form name="contact" data-netlify="true" data-netlify-recaptcha="true" class="contact-form" id="contact-form" >
                 <div class="row">
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-name" type="text" name="name" placeholder="Name" required=""></div>
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required=""></div>
@@ -618,17 +618,17 @@
           <div class="row contact-info">
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-map"></i>
-                <p class="info-content"><a href="https://goo.gl/maps/2YAGiugG47VAS17g7" target="_blank">4155, Liverpool, United Kingdom.</a></p>
+                <p class="info-content"><a href="https://goo.gl/maps/zebf2hkETeAVLPD69" target="_blank">Clearwater, FL</a></p>
               </div>
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-call"></i>
-                <p class="info-content"><a href="tel:+441632967704">+44 1632 967704</a></p>
+                <p class="info-content"><a href="tel:+9713442454">(971) 344-2454</a></p>
               </div>
             </div>
             <div class="col-12 col-sm-4">
               <div class="single-info"><i class="info-icon icon ion-md-send"></i>
-                <p class="info-content"><a href="mailto:alex@example.com">alex@example.com</a></p>
+                <p class="info-content"><a href="mailto:ryanlaclaire32@gmail.com">ryanlaclaire32@gmail.com</a></p>
               </div>
             </div>
           </div>
