--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                   <div class="col-12 col-md-6 form-group"><input class="form-control" id="contact-email" type="email" name="email" placeholder="Email" required=""></div>
                   <div class="col-12 form-group"><input class="form-control" id="contact-subject" type="text" name="subject" placeholder="Subject" required=""></div>
                   <div class="col-12 form-group form-message"><textarea class="form-control" id="contact-message" name="message" placeholder="Message" rows="5" required=""></textarea></div>
-                  <div class="mb-3" data-netlify-recaptcha="true"></div>
+                  <div class=" col-12 mb-3" data-netlify-recaptcha="true"></div>
                   <div class="col-12 form-submit">
                     <button class="btn button-main button-scheme" id="contact-submit" type="submit">Send Message</button>
                     <p class="contact-feedback"></p>
